# elasticsearch-sql-odbc

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.rtf  NOTICE.txt  README.md  build.bat  catalog-info.yaml  ujson4c.diff
.buildkite/: branches.sh  dra-build.ps1  dra-release.sh  dra-workflow.trigger.sh  pipeline.dra.yml  pipeline.version.bump.yml  pipeline.yml
.buildkite/hooks/: pre-command  pre-command.ps1
.github/: issue_template.md
.github/workflows/: sync-main-branch.yml
devtools/: astyle-c.sh
devtools/githooks/: pre-commit
docs/: applications-excel.asciidoc  applications-microstrat.asciidoc  applications-powerbi.asciidoc  applications-ps1.asciidoc  applications-qlik.asciidoc  applications-tableau.asciidoc  applications.asciidoc  configuration.asciidoc  installation.asciidoc  odbc.asciidoc
driver/: build_def.bat  catalogue.c  catalogue.h  connect.c  connect.h  convert.c  convert.h  defs.h  driver.def.cmake  driver.rc.cmake  dsn.c  dsn.h  error.c  error.h  handles.c  handles.h  info.c  info.h  log.c  log.h  odbc.c  queries.c  queries.h  setup.c  tinycbor.c  tinycbor.h  tracing.h  util.c  util.h
dsneditor/: EsOdbcDsn.sln
dsneditor/EsOdbcDsnBinding/: EsOdbcDsnBinding.cc  EsOdbcDsnBinding.cpp  EsOdbcDsnBinding.h  EsOdbcDsnBinding.rc.cmake  EsOdbcDsnBinding.vcxproj  EsOdbcDsnBinding.vcxproj.filters
dsneditor/EsOdbcDsnEditor/: App.config  DSNEditorForm.Designer.cs  DSNEditorForm.cs  DSNEditorForm.resx  DsnEditorFactory.cs  EsOdbcDsnEditor.csproj  ExtensionMethods.cs
dsneditor/EsOdbcDsnEditor/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
dsneditor/EsOdbcDsnEditorLauncher/: EsOdbcDsnEditorLauncher.csproj  Launcher.Designer.cs  Launcher.cs  Program.cs
dsneditor/EsOdbcDsnEditorLauncher/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
installer/: README.md  build.bat  build.sh  paket.dependencies
installer/src/: Installer.sln
installer/src/Installer/: App.config  Installer.csproj  ODBCDriver.cs  ODBCDriverDataSource.cs  Program.cs  packages.config
installer/src/Installer/Properties/: AssemblyInfo.cs
installer/src/Installer/wix/: Installer.g.wxs  ODBCInstaller.g.wxs
installer/src/InstallerCA/: CustomActions.cs  InstallerCA.csproj  paket.references
installer/src/InstallerCA/Properties/: AssemblyInfo.cs
installer/src/Tests/: Bootstrapper.ps1
installer/src/Tests/Common/: PesterBootstrap.ps1  Utils.ps1  Vagrantfile
libs/ujson4c/src/: ujdecode.c  ujdecode.h
src/: ujdecode.c  ujdecode.h
test/: CMakeLists.txt  bodies.h  connected_dbc.cc  connected_dbc.h  test_bindcol.cc  test_bindparam.cc  test_catalogue.cc  test_colattribute.cc  test_conversion_c2sql_boolean.cc  test_conversion_c2sql_date.cc  test_conversion_c2sql_interval.cc  test_conversion_c2sql_null.cc  test_conversion_c2sql_numeric.cc  test_conversion_c2sql_time.cc  test_conversion_c2sql_timestamp.cc  test_conversion_c2sql_varchar.cc  test_conversion_compatibility.cc  test_conversion_sql2c.cc  test_conversion_sql2c_boolean.cc  test_conversion_sql2c_date.cc  test_conversion_sql2c_floats.cc  test_conversion_sql2c_interval.cc  test_conversion_sql2c_ints.cc  test_conversion_sql2c_string.cc  test_conversion_sql2c_time.cc  test_conversion_sql2c_timestamp.cc  test_conversion_sql2c_ulong.cc  test_driverconnect.cc  test_dsn.cc  test_intgr_connected_dbc.cc  test_queries.cc  test_sqlgetdata.cc  test_util.cc
test/integration/: data.py  devrun.py  elasticsearch.py  install.py  ites.py  llh.sh  testing.py
